@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclCompile.c,v 1.40 2002/08/05 03:24:40 dgp Exp $
+ * RCS: @(#) $Id: tclCompile.c,v 1.41 2002/09/24 12:53:33 dkf Exp $
  */
 
 #include "tclInt.h"
@@ -3334,10 +3334,10 @@ TclPrintObject(outFile, objPtr, maxChars)
 void
 TclPrintSource(outFile, string, maxChars)
     FILE *outFile;		/* The file to print the source to. */
-    char *string;		/* The string to print. */
+    CONST char *string;		/* The string to print. */
     int maxChars;		/* Maximum number of chars to print. */
 {
-    register char *p;
+    register CONST char *p;
     register int i = 0;
 
     if (string == NULL) {
